SubBt/force-app/main/default/objects/Child_Mapping__c/Child_Mapping__c.object-meta.xml
<CustomObject>
    <label>Child Mapping</label>
    <nameField>
        <displayFormat>CM-{000000}</displayFormat>
        <label>Child Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Child Mapping</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>