SubBt/force-app/main/default/objects/Child_Mapping__c/fields/Column_Number__c.field-meta.xml
<CustomField>
    <fullName>Column_Number__c</fullName>
    <label>Column Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>