SubBt/force-app/main/default/objects/Child_Mapping__c/fields/Mapping_Field__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Field__c</fullName>
    <label>Mapping Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>